--- a/styles/styles_05.css
+++ b/styles/styles_05.css
@@ -51,7 +51,7 @@ h6 {
 h2 {
   margin: 0;
   font-size: 22px;
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
 }
 h5 {
   margin-top: 0;
@@ -141,6 +141,7 @@ button:disabled {
   width: 64px;
   height: 64px;
   margin-right: 8px;
+  filter: drop-shadow(1px 1px 2px rgba(0, 0, 0, 0.2));
 }
 .setting-row {
   display: flex;
