--- a/styles/styles_05.css
+++ b/styles/styles_05.css
@@ -1,5 +1,30 @@
 :root {
   --max-content-width: 425px;
+  --text-color-01: #1a2b4c;
+  --text-color-02: #1a4480;
+  --text-color-03: #0d376e;
+  --text-color-04: #2554a1;
+  --text-color-05: #026aa7;
+  --text-color-06: #0277bd;
+  --background-color-01: #fff8e1;
+  --background-color-02: #e3f2fd;
+  --background-color-03: #cfd8dc;
+  --background-color-04: #b3d4fc;
+  --background-color-05: #f7fbff;
+  --highlight-background-color-01: #e3f2fd;
+  --highlight-background-color-02: #cfd8dc;
+  --highlight-background-color-03: #b3d4fc;
+  --highlight-background-color-04: #f9fbe7;
+  --highlight-background-color-05: #ffffcc;
+  --highlight-color-01: #1a2b4c;
+  --highlight-color-02: #1a4480;
+  --highlight-color-03: #0d376e;
+  --highlight-color-04: #026aa7;
+  --highlight-color-05: #0277bd;
+  --overlay-background-color-transparent-00: rgba(255, 248, 225, 0);
+  --overlay-background-color-transparent-03: rgba(255, 248, 225, 0.3);
+  --overlay-background-color-transparent-08: rgba(255, 248, 225, 0.8);
+  --overlay-background-color-transparent-10: rgba(255, 248, 225, 1);
 }
 
 *,
@@ -21,7 +46,7 @@ body {
   padding: 12px;
   overflow-x: hidden;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  background: #fff8e1;
+  background: var(--background-color-01);
   color: #1a2b4c;
 }
 .scroll-container {
@@ -40,6 +65,10 @@ body {
   align-items: center;
   max-width: var(--max-content-width);
   margin: 0 auto;
+}
+.scroll-bottom-space {
+  height: 180px;
+  pointer-events: none;
 }
 h2,
 h5,
@@ -199,6 +228,7 @@ button:disabled {
 }
 .speed-delay-wrapper,
 .digit-length-count-repeat-wrapper,
+.fullscreen-wrapper,
 .language-voice-wrapper {
   display: flex;
   flex-direction: column;
@@ -214,6 +244,7 @@ button:disabled {
 .digit-length-group,
 .count-group,
 .repeat-group,
+.fullscreen-group,
 .language-group,
 .voice-group {
   align-items: baseline;
@@ -223,7 +254,8 @@ button:disabled {
 .delay-group,
 .digit-length-group,
 .count-group,
-.repeat-group {
+.repeat-group,
+.fullscreen-group {
   display: flex;
   flex-direction: row;
   gap: 12px;
@@ -269,8 +301,8 @@ button:disabled {
 }
 .number-input.highlight {
   font-weight: bold;
-  background-color: #e6f2ff;
-  color: #0a3c78;
+  background-color: var(--highlight-background-color-05);
+  color: var(--highlight-color-03);
 }
 .repeat-info-group {
   padding: 8px 8px 0;
@@ -282,7 +314,8 @@ button:disabled {
 .delay-group select,
 .digit-length-group select,
 .count-group select,
-.repeat-group select {
+.repeat-group select,
+.fullscreen-group select {
   width: 90px;
 }
 .language-group select,
@@ -313,6 +346,54 @@ button:disabled {
   background-color: #e2f0fb;
   border-color: #0366d6;
 }
+.background-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: var(--overlay-background-color-transparent-10);
+  pointer-events: none;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  z-index: 999;
+}
+.background-overlay.show {
+  opacity: 1;
+}
+
+.active-number-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20vw;
+  font-weight: bold;
+  color: #0d376e;
+  background-color: var(--overlay-background-color-transparent-00);
+  z-index: 9999;
+  pointer-events: none;
+  opacity: 0;
+  transform: scale(2);
+  /* transition: opacity 0.3s ease, transform 0.5s ease; */
+  /* transition: opacity 0.15s ease-in, transform 0.15s ease-in; */
+  transition: opacity 0.15s ease;
+}
+.active-number-overlay.show {
+  opacity: 1;
+  /* transform: scale(2.5); */
+  /* transition: opacity 0.15s ease-out, transform 0.1s ease-out; */
+  transition: opacity 0.5s ease;
+}
+.section-block-buttons {
+  position: relative;
+  z-index: 99999;
+}
+
 @media (min-width: 768px) {
   /* .layout {
     margin: 0 auto;
