--- a/styles/styles_05.css
+++ b/styles/styles_05.css
@@ -21,9 +21,11 @@
   --highlight-color-03: #0d376e;
   --highlight-color-04: #026aa7;
   --highlight-color-05: #0277bd;
+  --highlight-color-10: #bd0202;
   --overlay-background-color-transparent-00: rgba(255, 248, 225, 0);
   --overlay-background-color-transparent-03: rgba(255, 248, 225, 0.3);
   --overlay-background-color-transparent-08: rgba(255, 248, 225, 0.8);
+  --overlay-background-color-transparent-09: rgba(255, 248, 225, 0.9);
   --overlay-background-color-transparent-10: rgba(255, 248, 225, 1);
 }
 
@@ -46,8 +48,8 @@ body {
   padding: 12px;
   overflow-x: hidden;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  background: var(--background-color-01);
-  color: #1a2b4c;
+  background: #fff8e1;
+  color: var(--text-color-01);
 }
 .scroll-container {
   height: calc(var(--vh, 1vh) * 100);
@@ -65,10 +67,6 @@ body {
   align-items: center;
   max-width: var(--max-content-width);
   margin: 0 auto;
-}
-.scroll-bottom-space {
-  height: 180px;
-  pointer-events: none;
 }
 h2,
 h5,
@@ -90,7 +88,7 @@ h5 {
   text-align: right;
 }
 input {
-  background-color: #f7fbff;
+  background-color: var(--background-color-05);
   border: 1px solid #b3d4fc;
   border-radius: 6px;
   width: 120px;
@@ -98,11 +96,11 @@ input {
   padding: 4px 8px;
   font-size: 0.95em;
   text-align: center;
-  color: #1a2b4c;
+  color: var(--text-color-01);
   outline: none;
 }
 select {
-  background-color: #f7fbff;
+  background-color: var(--background-color-05);
   border: 1px solid #b3d4fc;
   border-radius: 6px;
   width: 120px;
@@ -110,7 +108,7 @@ select {
   padding: 4px 8px;
   font-size: 0.95em;
   text-align: center;
-  color: #1a2b4c;
+  color: var(--text-color-02);
   /* outline: none; */
 }
 select:hover {
@@ -123,23 +121,46 @@ select:disabled {
 label {
   font-weight: 600;
   font-size: 0.95em;
-  color: #1a2b4c;
+  color: var(--text-color-02);
   white-space: nowrap;
+  user-select: none;
 }
 label.disabled {
   opacity: 0.5;
   pointer-events: none;
   cursor: default;
 }
+textarea {
+  border: 2px solid #b3ddff;
+  border-radius: 6px;
+  font-family: Arial, sans-serif;
+  font-size: 16px;
+  line-height: 1.4;
+  color: var(--text-color-02);
+  min-height: 90px;
+  overflow-y: auto;
+  padding: 8px;
+  resize: vertical;
+  transition: border-color 0.2s ease;
+  width: 100%;
+}
+textarea::placeholder {
+  color: var(--text-color-02);
+}
+textarea:focus {
+  border-color: #0059b3;
+  outline: none;
+}
 button {
   width: 100%;
-  padding: 8px 4px;
+  max-width: 120px;
+  padding: 4px 4px;
   font-size: 0.95em;
   font-weight: 600;
+  color: var(--text-color-02);
   background: #e3f2fd;
   border: 2px solid #b3d4fc;
-  border-radius: 8px;
-  color: #1a2b4c;
+  border-radius: 6px;
   cursor: pointer;
   transition: background 0.3s;
   cursor: pointer;
@@ -147,7 +168,6 @@ button {
 button:hover {
   background: #c5e6ff;
   border-color: #0366d6;
-  color: #034078;
 }
 button:disabled {
   opacity: 0.5;
@@ -289,10 +309,10 @@ button:disabled {
   padding: 2px;
   font-size: 1.4em;
   text-align: center;
-  background-color: #f7fbff;
+  background-color: var(--background-color-05);
   border: 1px solid #b3d4fc;
   border-radius: 6px;
-  color: #1a2b4c;
+  color: var(--text-color-01);
   transition: box-shadow 0.2s, outline 0.2s;
 }
 .number-input.selected {
@@ -302,7 +322,7 @@ button:disabled {
 .number-input.highlight {
   font-weight: bold;
   background-color: var(--highlight-background-color-05);
-  color: var(--highlight-color-03);
+  color: var(--highlight-color-10);
 }
 .repeat-info-group {
   padding: 8px 8px 0;
@@ -346,13 +366,16 @@ button:disabled {
   background-color: #e2f0fb;
   border-color: #0366d6;
 }
+.scroll-bottom-space {
+  padding-bottom: 250px;
+}
 .background-overlay {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: var(--overlay-background-color-transparent-10);
+  background: var(--overlay-background-color-transparent-09);
   pointer-events: none;
   opacity: 0;
   transition: opacity 0.3s ease;
@@ -361,7 +384,6 @@ button:disabled {
 .background-overlay.show {
   opacity: 1;
 }
-
 .active-number-overlay {
   position: fixed;
   top: 0;
@@ -373,7 +395,7 @@ button:disabled {
   justify-content: center;
   font-size: 20vw;
   font-weight: bold;
-  color: #0d376e;
+  color: var(--text-color-03);
   background-color: var(--overlay-background-color-transparent-00);
   z-index: 9999;
   pointer-events: none;
