--- a/styles/styles_06.css
+++ b/styles/styles_06.css
@@ -411,7 +411,9 @@ button:disabled {
   /* transition: opacity 0.15s ease-out, transform 0.1s ease-out; */
   transition: opacity 0.5s ease;
 }
-.section-block-buttons {
+/* .repeats-text, */
+/* .repeat-left, */
+.start-pause-btn {
   position: relative;
   z-index: 99999;
 }
